@@ -1,7 +1,3 @@
-*) add a browser to browse/select all registered (open or not) Folders.  in 
-other words, we want everything that appears in the FolderTree, not all 
-possible folders, nor just the ones that are open.
-
 *) fix it so the file (and font and so forth?) editor actually includes
 	the '...' icon.
 
@@ -12,6 +8,9 @@ possible folders, nor just the ones that are open.
 
 *) make an option where message windows size to the viewport of the
 desktop pane.
+
+*) make sure that changes to the user's sentfolder (and other properties)
+	get updated without a restart.
 
 *) queuing of outgoing mails
 	todo on this:
