@@ -1,3 +1,6 @@
+changed the selection of things like the sent folder, trash folder, etc.,
+to use only already subscribed folders.
+
 made it so doing an open action on the folder node actually makes sure
 that the Folder is in an OPEN state.
 
